--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <title>Amoeba free one page responsive bootstrap site template</title>
         <meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="http://alexpos.github.io/noblewine//js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
-	<link rel="stylesheet" href="http://alexpos.github.io/noblewine//css/nw.css">
+	<link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="css/nw.css">
     </head>
     
     <body>
@@ -321,26 +321,26 @@
 
 	
 	<a href="#header" class="scrollup"><i class="fa fa-chevron-up"></i></a>	
-        <script src="http://alexpos.github.io/noblewine//js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-<script src="http://alexpos.github.io/noblewine//js/jquery.js"></script>
-<script src="http://alexpos.github.io/noblewine//js/jquery.easing.1.3.js"></script>
-<script src="http://alexpos.github.io/noblewine//js/bootstrap.min.js"></script>
+        <script src="js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+<script src="js/jquery.js"></script>
+<script src="js/jquery.easing.1.3.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASm3CwaK9qtcZEWYa-iQwHaGi3gcosAJc&sensor=false"></script>
-<script src="http://alexpos.github.io/noblewine//js/jquery.isotope.min.js"></script>
-<script src="http://alexpos.github.io/noblewine//js/jquery.nicescroll.min.js"></script>
-<script src="http://alexpos.github.io/noblewine//js/fancybox/jquery.fancybox.pack.js"></script>
-<script src="http://alexpos.github.io/noblewine//js/skrollr.min.js"></script>		
-<script src="http://alexpos.github.io/noblewine//js/jquery.scrollTo-1.4.3.1-min.js"></script>
-<script src="http://alexpos.github.io/noblewine//js/jquery.localscroll-1.2.7-min.js"></script>
-<script src="http://alexpos.github.io/noblewine//js/stellar.js"></script>
-<script src="http://alexpos.github.io/noblewine//js/jquery.appear.js"></script>
-<script src="http://alexpos.github.io/noblewine//js/validate.js"></script>
-<script src="http://alexpos.github.io/noblewine//js/main.js"></script>
-<script src="http://alexpos.github.io/noblewine//js/jquery.countdown.min.js"></script>
+<script src="js/jquery.isotope.min.js"></script>
+<script src="js/jquery.nicescroll.min.js"></script>
+<script src="js/fancybox/jquery.fancybox.pack.js"></script>
+<script src="js/skrollr.min.js"></script>		
+<script src="js/jquery.scrollTo-1.4.3.1-min.js"></script>
+<script src="js/jquery.localscroll-1.2.7-min.js"></script>
+<script src="js/stellar.js"></script>
+<script src="js/jquery.appear.js"></script>
+<script src="js/validate.js"></script>
+<script src="js/main.js"></script>
+<script src="js/jquery.countdown.min.js"></script>
 <script type="text/javascript">
  // When the window has finished loading create our google map below
  google.maps.event.addDomListener(window, 'load', init);
- 
+
  function init() {
      // Basic options for a simple Google Map
      // For more options see: https://developers.google.com/maps/documentation/javascript/reference#MapOptions
