--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 			<span class="fa fa-bars color-white"></span>
 		    </button>
-		    <h1><a class="navbar-brand" href="index.html" data-0="line-height:50px;" data-300="line-height:50px;"><img src="/img/logo-small.png"> Noble Wine
+		    <h1><a class="navbar-brand" href="index.html" data-0="line-height:50px;" data-300="line-height:50px;"><img src="img/logo-small.png"> Noble Wine
 		    </a></h1>
 		</div>
 		<div class="navbar-collapse collapse">
@@ -44,7 +44,7 @@
 	    <div class="col-md-6 col-md-offset-3">
 		
 		<div class="align-center">
-                    <div class="logo centered"><img src="/img/logo.png" alt="Noble Wine"></div>
+                    <div class="logo centered"><img src="img/logo.png" alt="Noble Wine"></div>
 		    <h2 class="slogan">Welcome to Noble Wine</h2>
                     <h3>Professional approach to wine</h3>
 		    <h2 class="subtitle">We're working hard to finish our website and we'll ready to launch in</h2>
