--- a/index.html
+++ b/index.html
@@ -298,6 +298,11 @@
     </div>
 </section>
 
+        <!-- map -->
+<section id="section-map" class="clearfix">
+    <div id="map"></div>
+</section>
+
         <section id="footer" class="section footer">
     <div class="container">
 	<div class="row animated opacity mar-bot20" data-andown="fadeIn" data-animation="animation">
@@ -354,7 +359,7 @@
 
          // How you would like to style the map. 
          // This is where you would paste any style found on Snazzy Maps.
-         styles: [	{		featureType:"all",		elementType:"all",		stylers:[		{			invert_lightness:true		},		{			saturation:10		},		{			lightness:30		},		{			gamma:0.5		},		{			hue:"#1C705B"		}		]	}	]
+         styles: [	{		featureType:"all",		elementType:"all",		stylers:[		{			invert_lightness:true		},		{			saturation:10		},		{			lightness:30		},		{			gamma:0.5		},		{			hue:"#dad4c3"		}		]	}	]
      };
 
      // Get the HTML DOM element that will contain your map 
